Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- Renamed the default portal box titles to make them more meaningful.
- Removed child selectors in the CSS because MSIE doesn't understand them.
- Disabled only the MSIE PNG behavior, but added back the MSIE conditional
  comment.
- #477 : CPS root folder shouln't be an ordered folder
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Renamed the "comment" input in transition forms into "comments", so that it is
  more consistent with the user interface.