@@ -10,8 +10,11 @@ Bug fixes:
 - Removed child selectors in the CSS because MSIE doesn't understand them.
 - Disabled only the MSIE PNG behavior, but added back the MSIE conditional
   comment.
-- #477 : CPS root folder shouln't be an ordered folder
+- #477 : CPS root folder shouldn't be an ordered folder
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Renamed the "comment" input in transition forms into "comments", so that it is
   more consistent with the user interface.
+- Removed the border="0" attribute produced by the getImgTag.py script to that
+  CPS HTML gets closer to XHTML Strict, that is only semantic and as less
+  presentation information as possible, the CSS taking care of the layout.
